--- a/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/CreateStoryAudioSelectionItemViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/CreateStory/CreationStorySelectionItems/SelectAudio/CreateStoryAudioSelectionItemViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateStoryAudioSelectionItemViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateStoryAudioSelectionItemViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="designer" destination="l4I-xA-B6y" id="w9g-ok-XNl"/>
                 <outlet property="emtyListView" destination="CaV-tJ-vhx" id="Cix-uH-tAT"/>
@@ -25,12 +24,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="05W-1P-KTC">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WvP-6C-fk1">
-                    <rect key="frame" x="0.0" y="88" width="375" height="579"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="68" width="375" height="599"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="eid-Qc-yBg"/>
                         <outlet property="delegate" destination="-1" id="MTP-P2-1FZ"/>
@@ -53,7 +52,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="pcn-zJ-6Hb" secondAttribute="trailing" constant="8" id="5xx-6C-laB"/>
                         <constraint firstItem="pcn-zJ-6Hb" firstAttribute="leading" secondItem="CaV-tJ-vhx" secondAttribute="leading" constant="8" id="RXW-pD-GTe"/>
@@ -64,14 +63,14 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v9X-ur-vVj">
-                    <rect key="frame" x="0.0" y="20" width="375" height="0.0"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstAttribute="height" id="Cl8-b0-efY"/>
                     </constraints>
                 </view>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SBL-5S-wVd">
-                    <rect key="frame" x="78" y="33" width="219" height="29"/>
+                    <rect key="frame" x="78" y="13" width="219" height="29"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="219" id="3rp-5r-l1F"/>
                         <constraint firstAttribute="height" constant="28" id="eCY-s8-CzV"/>
@@ -85,7 +84,8 @@
                     </connections>
                 </segmentedControl>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="CaV-tJ-vhx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="5XS-GW-ekY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CaV-tJ-vhx" secondAttribute="trailing" constant="16" id="9Mf-V8-JQs"/>
@@ -104,10 +104,9 @@
                 <constraint firstItem="SBL-5S-wVd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ude-wk-6nu"/>
                 <constraint firstItem="CaV-tJ-vhx" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="yvZ-Hk-5ZD"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
-        <customObject id="l4I-xA-B6y" customClass="CreateStoryAudioSelectionItemDesigner" customModule="lifebox" customModuleProvider="target">
+        <customObject id="l4I-xA-B6y" customClass="CreateStoryAudioSelectionItemDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="emtyListLabel" destination="pcn-zJ-6Hb" id="XWF-U4-yyB"/>
                 <outlet property="emtyListView" destination="CaV-tJ-vhx" id="paS-i2-7VL"/>
@@ -118,5 +117,8 @@
     </objects>
     <resources>
         <image name="ImageNoMusics" width="96" height="72"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
