--- a/Depo/Depo/Presentation/UserStories/Others/InstaPickSelection/PhotoSelectionNoFilesView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/InstaPickSelection/PhotoSelectionNoFilesView.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="6kT-Hw-2h9" customClass="PhotoSelectionNoFilesView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="6kT-Hw-2h9" customClass="PhotoSelectionNoFilesView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -31,13 +30,13 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <viewLayoutGuide key="safeArea" id="8fc-Z3-t2g"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="iRb-ER-skE" firstAttribute="leading" secondItem="8fc-Z3-t2g" secondAttribute="leading" constant="16" id="NnC-lH-o3g"/>
                 <constraint firstItem="8fc-Z3-t2g" firstAttribute="trailing" secondItem="iRb-ER-skE" secondAttribute="trailing" constant="16" id="OwO-im-djk"/>
                 <constraint firstItem="iRb-ER-skE" firstAttribute="centerY" secondItem="6kT-Hw-2h9" secondAttribute="centerY" id="bDX-Af-yzi"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="8fc-Z3-t2g"/>
             <connections>
                 <outlet property="cameraImageView" destination="L5W-aH-LQX" id="UTU-Hr-o5S"/>
                 <outlet property="noPhotosLabel" destination="rFU-4A-2t6" id="gkX-0i-KOm"/>
@@ -47,5 +46,8 @@
     </objects>
     <resources>
         <image name="ImageNoPhotos" width="96" height="96"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
