--- a/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
@@ -41,7 +41,7 @@
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" name="primaryBackground"/>
                                 <constraints>
                                     <constraint firstItem="9eN-JQ-9t3" firstAttribute="top" secondItem="fgF-nV-U3k" secondAttribute="top" id="2ah-KI-gCj"/>
                                     <constraint firstItem="3c5-un-BNe" firstAttribute="centerY" secondItem="fgF-nV-U3k" secondAttribute="centerY" id="OCr-Ak-2o0"/>
@@ -263,7 +263,7 @@
         <image name="privateSharePeople" width="16" height="13"/>
         <image name="selectedList" width="36" height="36"/>
         <namedColor name="itemSeperator">
-            <color red="0.91700000000000004" green="0.91700000000000004" blue="0.91700000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
